<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/LightBlue"
    android:padding="5dp"
    tools:context=".Quotes">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text20"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="@color/Green"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text21"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text22"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text23"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            android:textColor="@color/Crimson"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text24"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text25"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            android:textColor="@color/Crimson"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text26"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text27"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            android:textColor="@color/Crimson"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text28"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text29"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            android:textColor="@color/Crimson"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text30"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text31"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            android:textColor="@color/Crimson"
            />
    </LinearLayout>

</ScrollView>