<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightSkyBlue"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:src="@drawable/lionel_messi"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lionel Messi"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="40sp"
            android:textColor="@color/Black"
            android:padding="8dp"
            />
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/button1"
            android:background="@color/Chocolate"
            android:textSize="15sp"
            />
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/button2"
            android:background="@color/Chocolate"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            />
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/button3"
            android:background="@color/Chocolate"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            />
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/button4"
            android:background="@color/Chocolate"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            />
        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/button5"
            android:background="@color/Chocolate"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            />

</LinearLayout>