<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/LightBlue"
    android:padding="5dp"
    tools:context=".Career">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Career"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="@color/Green"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text4"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/club"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text5"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            android:textColor="@color/Crimson"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text6"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text7"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            android:textColor="@color/Crimson"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/club2"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text8"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text9"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            android:textColor="@color/Crimson"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/argentina"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text10"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            />
    </LinearLayout>


</ScrollView>