<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/LightBlue"
    android:padding="5dp"
    tools:context=".Achievements">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Achievements"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="@color/Green"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text11"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text12"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/olympic"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text13"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text14"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ballon"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text15"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/golden"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text16"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/fifa"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text17"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
    </LinearLayout>

</ScrollView>