<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/LightBlue"
    android:padding="5dp"
    tools:context=".Childhood">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Childhood and Early Life"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/Green"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/childhood1"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/childhood_2"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text3"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            />

    </LinearLayout>

</ScrollView>